--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     </head>
     <body>
         <h1 class="header--main">Discover hidden places in the world around you</h1>
-        <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-        <video autoplay loop muted>
-            <source src="resources/css/videos/excursion.mp4" type="video/mp4"> 
-        </video>
+            <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+            <video autoplay loop muted>
+                <source src="resources/css/videos/excursion.mp4" type="video/mp4"> 
+            </video>
         <h2 class="header--secondary">Your personal travel guide</h2>
         <h4 class="header--fourth">Excursion remembers places you like, and recommends no points of interest around you.</h4>
+            <p><img src="resources/css/pictures/camp.jpeg"></p>
+            <p><img src="resources/css/pictures/phone.png"></p>
+        <h4 class="header--fourth">Coming Soon for iPhone & Android</h4>
+            <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
     </body>
 
 
