--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <p><img src="resources/css/pictures/phone.png"></p>
         <h4 class="header--fourth">Coming Soon for iPhone & Android</h4>
             <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-    </body>
+            <p class="copyright"> (c) Excursion</p>
 
+</body>
 
 </html> 
